update bereiche und book back item

--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -77,6 +77,155 @@ Aufträge, die nicht über den Webshop oder einen Marktplatz bei dir eingehen, l
 Passe die xref:auftraege:grundeinstellungen.adoc#[Grundeinstellungen] im Menü *Einrichtung » Aufträge » Einstellungen* an, bevor du die ersten Aufträge in deinem plentymarkets System abwickelst. Speichere die Grundeinstellungen auch dann einmalig ab, wenn du die voreingestellten Werte nicht verändert hast.
 
 
+// TODO: anpassen auf neue UI
+[#1400]
+== Auftragsübersicht einrichten
+
+Damit du die Suchergebnisse gut überblicken und bearbeiten kannst, passe die Auftragsübersicht an. Zu dieser Übersicht kommst du über das Menü *Aufträge » Aufträge [Testphase]*. Alle Aufträge mit den wichtigsten Informationen zu jedem Auftrag werden dir angezeigt. Neben Informationen zu Kund:innen, dem Auftragsstatus, dem Zahlungsstatus sowie den Artikeln des Auftrags erkennst du z.B. auf einen Blick, ob der Warenausgang gebucht und ob eine Rechnung erzeugt wurde. So hast du die wichtigsten Vorgänge im Blick, ohne Aufträge zu öffnen. Bewege den Mauszeiger über die Symbole und Angaben, um Tooltips mit weiteren Informationen anzuzeigen. Eine Auflistung der Symbole mit Beschreibung findest du in <<table-symbols-order-overview>>.
+// TODO: wo ist die Tabelle?
+
+Über die neue Seitennavigation auf der linken Seite kannst du bestimmte Bereiche des Auftrags öffnen. Über icon:settings[set=material] kannst du die angezeigten Spalten verändern und auf deinen Bedarf anpassen.
+Du kannst auch einstellen, wie viele Aufträge pro Seite in der Auftragsübersicht angezeigt werden. Die höchste Anzahl an Aufträgen pro Seite ist 200, die niedrigste 25. +
+Nutze die Pfeile, um zur nächsten Seite oder zurück zu wechseln. Du kannst die gewünschte Seitenziffer auch direkt eintragen und die Eingabetaste betätigen. +
+
+Klicke auf icon:more_vert[set=material], um das Kontextmenü zu öffnen. Dort stehen dir, je nach Auftragstyp, verschiedene Aktionen zu Verfügung.
+icon:note_add[set=material] - *Dokument erstellen*
+icon:input[set=material] - *Watenausgang buchen*
+Symbol ? - *Referenzierte Bestellungen anzeigen*
+Symbol ? *Zahlung buchen*
+icon:delete[set=material] - *Auftrag löschen*
+
+In der Auftragsübersicht kannst du außerdem z.B. den *Status*, die *Artikeldaten* oder den *Rabatt* anpassen. Unten wird beispielhaft das Vorgehen bei einer Statusänderung beschrieben.
+
+//// 
+[.instruction]
+Auftragsstatus in der Auftragsübersicht anpassen:
+
+. Klicke auf *Status*. +
+→ Eine Liste mit den verfügbaren Status wird angezeigt.
+. Wähle den gewünschten Status. +
+. *Speichere* (icon:save[role="green"]) die Einstellungen. +
+→ Der Status wird aktualisiert.
+////
+
+[#1410]
+=== Auftragspositionen ein- oder ausblenden
+
+In der neuen Seitennavigation links findest du z.B. den Bereich *Auftragspositionen*. In diesem Bereich siehst du die im Auftrag enthaltenen Artikel mit wichtigen Parametern, z.B. *Menge*, Informationen zu Varianten oder Preise und Rabatt. 
+Über Icon Stift kannst du...
+Über Zahnrad: icon:settings[set=material] kannst du die Spalten der Tabelle konfigurieren und auf deinen Bedarf anpassen.
+
+
+[#1420]
+=== Informationen und Symbole in der Auftragsübersicht verstehen
+
+In der Auftragsübersicht werden je nach Zustand eines Auftrags verschiedene Symbole angezeigt.
+Die folgende Tabelle enthält eine Übersicht der möglichen Informationen. Einige Symbole erlauben dir auch direkt Aktionen auszuführen. Beachte, dass nie alle Symbole angezeigt werden, sondern nur die, die zum Bearbeitungsstand passend.
+
+// TODO: alte UI - wie jetzt beschreiben?
+
+//// 
+[[table-symbols-order-overview]]
+.Mögliche Symbole in der Auftragsübersicht
+[cols="1,3a"]
+|====
+|Tooltip des Symbols |Erläuterung
+
+| *Auftragsstatus*
+|Zeigt den aktuellen Auftragsstatus und erlaubt auch den Status zu ändern. Zum ändern, einfach auf den Status klicken und einen neuen wählen. +
+*Wichtig*: Ein Auftragsstatus &gt;= 7 kann nicht verringert werden, ohne dass vorher die Buchung des Warenausgangs zurückgesetzt wird.
+
+| *Versanddienstleister*
+|Individuelles Symbol des zugeordneten Dienstleisters. Ein Symbol wird jedoch nur angezeigt, wenn im xref:fulfillment:versand-vorbereiten.adoc#1000[Versandprofil] eine Markierung eingestellt wurde.
+
+| *DHL-Packstation*
+|Das Symbol wird nur angezeigt, wenn die Packstationsdaten korrekt im Auftrag hinterlegt sind. Es kann bei Aufträgen von Marktplätzen vorkommen, dass Packstationsdaten nicht korrekt sind, wenn der Marktplatz z.B. keine Validierung bereitstellt. In einem solchen Fall wird das Symbol nicht angezeigt, da aufgrund der falschen Daten nicht an eine Packstation geliefert werden kann.
+
+| *Versandart* oder +
+ *Versanddienstleisterservice*
+| *Schnellversand* ist ein Service, der zusätzlich durch ein Symbol angezeigt wird.
+
+| *Zahlungsart*
+|Individuelles Symbol der Zahlungsart.
+
+| *Warenausgang gebucht*
+|Wird nur angezeigt, wenn der Warenausgang gebucht wurde. Falls nur der Status in Status 7 geändert wurde, wird das Symbol nicht angezeigt.
+
+| *Mahnstufe*
+| xref:automatisierung:aktionsmanager.adoc#intable-dunning-level-procedure-manager[Mahnstufen] können per Aktionsmanager zugeordnet werden.
+
+| *Markierung*
+|Individuelle Auftragsmarkierung.
+
+| *Lieferland*
+|ISO-Code für das Lieferland nach ISO-3166 Alpha 2.
+
+| *Währung*
+|ISO-Code der Auftragswährung nach ISO 4217.
+
+| *Zahlungsstatus*
+|Wird passend zur Zahlung als farbiger Balken und zusätzlich in einem Tooltip als Prozentwert angezeigt.
+
+| *Auftragsbestätigung erstellen*
+|Auftragsbestätigung direkt erstellen.
+
+| *Rechnung erstellen*
+|Rechnung direkt erstellen.
+
+| *Zahlungseingang direkt buchen*
+|Zahlung direkt zum Auftrag buchen. Der Betrag ist frei einstellbar. Der offene Rechnungsbetrag ist voreingetragen.
+
+| *Lieferschein erstellen*
+|Lieferschein direkt erstellen.
+
+| *Warenausgang buchen*
+|Erlaubt den Warenausgang direkt zu buchen, wodurch der Bestand der Varianten reduziert wird, wenn du Bestand führst. Der Status der Auftrags ändert sich automatisch in Status 7.
+
+| *Tracking-URL anzeigen*
+|Die Tracking-URL dient zur Sendungsverfolgung eines Paketes. Die xref:fulfillment:versand-vorbereiten.adoc#840[Tracking-URL] musst du beim Einrichten von Versanddienstleistern eintragen und speichern.
+
+| *Notiz zum Auftrag erstellen*
+|Erlaubt eine Notiz zum Auftrag zu verfassen sowie eine bereits vorhandene Notiz zu lesen. An einem Symbol ohne Plus ist erkennbar, dass bereits eine Notiz existiert.
+
+| *Notizen zum Kunden*
+|Erlaubt eine Notiz zur Kund:in zu verfassen sowie eine bereits vorhandene Notiz zu lesen.
+
+| *E-Mail-Adresse des Kunden*
+|Erlaubt über dein E-Mail-Programm direkt eine E-Mail an die Kund:in des Auftrags zu senden.
+
+| *E-Mail-Service*
+|Öffnet das Tab E-Mail-Vorlagen und erlaubt so direkt eine E-Mail-Vorlage an die Kund:in zu senden oder bereits gesendete Vorlagen einzusehen.
+
+| *Vorhandene Vorgänge anzeigen*
+|Zeigt u.a. eine Liste von Retouren und Gutschriften mit Datum und Wert.
+
+| *Warenbestand ermitteln*
+|Lädt eine Warenbestandsübersicht für die im Auftrag enthaltenen Varianten. +
+Über den Warenkorb sind Nachbestellungen möglich.
+
+| *Artikelliste öffnen* oder *schließen*
+|Erlaubt die Auftragspositionen eines Auftrags ein- oder auszublenden.
+
+| *Nachbestellung anzeigen*
+|Öffnet die auftragsbezogene Nachbestellung im Menü *Nachbestellungen*.
+
+| *Rechnungsnummer*
+|Öffnet die Rechnung.
+
+| *Artikel-ID* oder *Varianten-ID*
+|Öffnet den Artikel oder die Variante im Menü *Artikel » Artikel bearbeiten*.
+|====
+////
+
+[#1500]
+== Aufträge bearbeiten
+
+Im Menü *Aufträge » Aufträge [Testphase]* werden deine Aufträge in der oben beschriebenen xref:auftraege:auftraege-verwalten.adoc#1400[Übersicht] angezeigt. Wie oben erklärt, stehen dir bereits in der Übersicht einige Bearbeitungsmöglichkeiten zur Verfügung, um einen schnellen Zugriff auf oft genutzte Funktionen zu gewährleisten. Zudem siehst du so auf einen Blick die grundlegenden Informationen, die du zu einem Auftrag benötigst. +
+Die vollständigen und umfangreichen Bearbeitungsmöglichkeiten sind verfügbar, wenn du auf die Auftrags-ID des Auftrages klickst, den du bearbeiten möchtest. Der gewählte Auftrag öffnet sich und die Auftragseinstellungen stehen dir nach Bereichen geordnet zur Verfügung. Du kannst Aufträge bearbeiten, bis ein Dokument für einen Auftrag erstellt wurde. Danach wird der Auftrag aus rechtlichen Gründen gesperrt. +
+In den folgenden Unterkapiteln werden dir die Tabs, auf die die Einstellungen sich verteilen, mit den verschiedenen Funktionen zur Bearbeitung erläutert.
+
+
+
 == Grundeinstellungen Aufträge
 // TODO: siehe grundeinstellungen.adoc, plus Warenhauszuordnung und Fallback
 
@@ -128,8 +277,7 @@ Um die Auftragsanlage zu erleichtern und schneller vorgehen zu können, solltest
 
 
 == Aufträge verwalten und bearbeiten
-
-// TODO: Auftragsanlage verschiedene Möglichkeiten
+// TODO: Auftragsanlage, verschiedene Möglichkeiten
 
 [#creater-order-or-offer]
 === Auftrag oder Angebot anlegen
@@ -338,13 +486,16 @@ Die einzelnen Datenfelder innerhalb des Portlets können jedoch nicht mehrfach h
 NEU Ansicht test
 Einstellungen aufklappen
 
-Slider *Portlet eingeklappt*
+Slider *Bereich eingeklappt*
 Die Namen der Bereiche können individualisiert werden. Gib im Datenfeld Titel einen neuen Namen für deinen Bereich ein. 
 Darunter: # Kacheln pro Zeile
-. Wähle aus: Keine Einschränkung, Eine Kachel bis 6 Kacheln - je nachdem, wie viele Kacheln du wählst, wird der Bereich dargestellt
+. Wähle aus: 
+.. Keine Einschränkung, 
+.. Eine Kachel bis 6 Kacheln - 
+je nachdem, wie viele Kacheln du wählst, wird der Bereich dargestellt
 
-. Klappe Elemente auf.
-Die enthaltenen Elemente = Bereiche können per Drag & Drop hinzugefügt werden. Im Bereich kannst du sie löschen, um sie wieder zurück in die Auswahl der Elemente zu schieben.
+. Klappe die Elemente auf.
+Die dort zu sehenden Elemente = Bereiche können per Drag & Drop hinzugefügt werden. Im Bereich kannst du sie löschen, um sie wieder zurück in die Auswahl der Elemente zu schieben.
 Artikelmenge
 
 // TODO: siehe Detailansicht Gestaltung bei Artikel
@@ -358,19 +509,22 @@ Icon Im Handbuch nachschlagen - das Handbuch öffnet sich
 Icon Andere Tabs schließen - alle anderen Tabs werden geschlossen
 
 [#individual-portlets]
-=== Eigene Portlets
+=== Eigene/individualisierte Bereiche
 
-Das eigene Portlet unterscheidet sich von den vorgefertigten Portlets in zwei wichtigen Punkten. Das eigene Portlet:
+Die eigenen Bereiche:
 
-* kann beliebig oft hinzugefügt werden.
-* enthält alle Artikeldatenfelder und nicht nur eine Teilmenge, wie es bei den vorgefertigten Portlets der Fall ist.
+* können beliebig oft hinzugefügt werden.
+* enthalten alle Artikeldatenfelder und nicht nur eine Teilmenge.
 
-Dank eigener Portlets bist du nicht auf die vorgefertigten Einstellungen angewiesen. Du kannst stattdessen selbst entscheiden, welche Einstellungen ein Portlet enthalten soll. Du kannst die Portlets zudem anders benennen. In der Seitennavigation links werden dir die Bezeichnungen der Portlets angezeigt. Über icon:settings[set=material] kannst du die Spalten der Portlets konfigurieren.
+Dank individualisierbarer Bereiche bist du nicht auf die vorgefertigten Einstellungen angewiesen. Du kannst stattdessen selbst entscheiden, welche Einstellungen ein Bereich enthalten soll. Du kannst die Bereiche auch anders benennen. In der Seitennavigation links werden dir die Bezeichnungen der Bereiche angezeigt. 
+
+[TIP]
+Über icon:settings[set=material] kannst du für jeden Bereich die Spalten konfigurieren. Du kannst die Reihenfolge über Drag&drop mit einem Klick auf *Verschieben* (icon:drag_indicator[set=material]) verändern. Durch Haken setzen oder Haken herausnehmen kannst du die Anzahl der Spalten verändern.
 
 [discrete]
 ==== Anwendungsbeispiel
 
-Stell dir vor, du bist mit der Standardanordnung der globalen Einstellungen nicht zufrieden. Du würdest lieber die Herstellereinstellungen und die Zustände separat gruppieren. Ein solches Szenario kann mit eigenen Bereichen realisiert werden.
+Stell dir vor, du bist mit der Standardanordnung der globalen Einstellungen nicht zufrieden. Du würdest z.B. lieber die Herstellereinstellungen und die Zustände separat gruppieren. Ein solches Szenario kann mit eigenen Bereichen realisiert werden.
 
 . Füge beliebig viele eigene Bereiche hinzu.
 . Gib den Bereichen aussagekräftige Namen.
@@ -382,20 +536,25 @@ image::artikel/neue-ui/assets/detailansicht-eigene-portlets.png[]
 
 === Verfügbare Bereiche und Datenfelder
 
-// TODO: Einleitung; Icons
+// TODO: Einleitung; Icons - wie gestalten?
 Über den Bereichen eines geöffneten Auftrags findest du die Optionen:
-Speichern: icon:save[set=material] 
-Sperren/Entsperren
-Warenkorb Aufträge erstellen: icon:shopping_cart[set=material] 
-Trichter Auftrag teilen: icon:call_split[set=material]
-// TODO: wie gestalten?
+* Speichern: icon:save[set=material] 
+* Sperren: icon:lock[set=material]
+* Aufträge erstellen: icon:shopping_cart[set=material] 
+* Auftrag teilen: icon:call_split[set=material]
+
 Über icon:shopping_cart[set=material] lassen sich folgende Auftragstypen anlegen:
 * Gewährleistung: 
 ** Für alle Positionen
 ** Für bestimmte Positionen
-Gutschrift: Für alle Positionen, Für bestimmte Positionen
-Lieferauftrag: Automatisch aufteilen, Für bestimmte Positionen
-Retoure: Für bestimmte Positionen
+* Gutschrift: 
+** Für alle Positionen
+** Für bestimmte Positionen
+* Lieferauftrag: 
+** Automatisch aufteilen
+** Für bestimmte Positionen
+* Retoure: 
+** Für bestimmte Positionen
 
 ////
 nicht alle Bereiche werden initial mit Daten geladen (Datenlast reduzieren) - nachfragen was das bedeutet. Welche Bereiche nicht?
@@ -404,42 +563,41 @@ https://knowledge.plentymarkets.com/de-de/manual/main/crm/kontakt-bearbeiten.htm
 
 
 [#portlet-overview]
-=== Portlet *Übersicht*
-Im Portlet *Übersicht* siehst du alle Informationen zur Menge der Artikel und Kosten.
+=== Bereich: Übersicht
+Im Bereich *Übersicht* siehst du alle Informationen zur Menge der Artikel und Kosten.
 
 [[table-portlet-overview]]
-.Portlet: Übersicht
+.Bereich: Übersicht
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
 
 | *Warenwert netto*
-| Der Warenwert netto wird angezeigt.
+|Der Warenwert netto wird angezeigt.
 
 | *Rechnungsbetrag*
-| Der Rechnungsbetrag wird angezeigt.
+|Der Rechnungsbetrag wird angezeigt.
 
 | *Versandkosten netto*
-| Die Versandkosten netto werden angezeigt.
+|Die Versandkosten netto werden angezeigt.
 
 | *MwSt.*
-| Die Mehrwertsteuer wird in Euro angezeigt.
+|Die Mehrwertsteuer wird in Euro angezeigt.
 
 | *Artikelmenge*
-| Die Anzahl der Artikel wird angezeigt. +
-Der grüne Strich links bedeutet...
+|Die Anzahl der Artikel wird angezeigt. +
 
 | *Steuerfreier Betrag*
-| Der Steuerfreie Betrag wird angezeigt.
+|Der Steuerfreie Betrag wird angezeigt.
 |====
 
 
 [#portlet-status-tags]
-=== Portlet *Status und Tags*
-Im Portlet *Status und Tags* siehst du...
+=== Bereich: Status und Tags
+Im Bereich *Status und Tags* siehst du den Status des Auftrags und die gewählten Tags.
 
 [[table-portlet-status-tags]]
-.Portlet: Status und Tags
+.Bereich: Status und Tags
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
@@ -450,34 +608,36 @@ Im Portlet *Status und Tags* siehst du...
 
 | *Tags*
 |Der aktuelle Tag wird angezeigt.
-|Wähle den Tag des Auftrags aus der Dropdown-Liste.
-
-Auswahl bei Tags:
+|Wähle den Tag des Auftrags aus der Dropdown-Liste:
 * Auftrags-Tag
 * Lieferdatum: gesetzt
 * Status: Geliefert
 * Status: Offen
 * Zahlung: bezahlt
+
 |====
 
+
 [#portlet-address]
-=== Portlet Adressen
-Im Portlet *Adressen* siehst du alle Informationen zu Rechnungs- und Lieferadresse.
-Über icon:more_vert[set=material] rechts öffnet sich jeweils das Kontextmenü.
+=== Bereich: Adressen
+Im Bereich *Adressen* siehst du alle Informationen zu Rechnungs- und Lieferadresse.
+Über icon:more_vert[set=material] rechts öffnet sich jeweils das Kontextmenü und ein Bearbeitungsfenster.
 
 [[table-portlet-address]]
-.Portlet: Adressen
+.Bereich: Adressen
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
 
 | *Rechnung*
-|Rechnungsadresse mit Land und ID (VAT fehlt)
+|Rechnungsadresse mit Land und ID (VAT fehlt). +
+Als Standard: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die Idee.
 
 | *Lieferung* 
-|Lieferadresse mit Land und ID (VAT fehlt)
+|Lieferadresse mit Land und ID (VAT fehlt). +
+Als Standard: Name, Straße, PLZ und Ort, Land, E-Mail-Adresse sowie die Idee.
 
-// TODO: wie richtig darstellen?
+// TODO: Info aus Kontextmenü - wie richtig darstellen?
 Adressangaben
 * Anrede
 * Firma (Name 1)
@@ -500,12 +660,13 @@ Adressoptionen
 * Typ: 
 Umsatzsteuernummer, Externe Adress-ID, Gelangensbestätigung, Postnummer, Personennummer, FSK, Geburtstag, Titel, Ansprechpartner, Externe Kunden-ID
 eingeben und speichern
+
 |====
 
 
 [#portlet-general]
-=== Bereich Allgemein
-Im Bereich *Allgemein* siehst du einen Überblick über deinen Auftrag.
+=== Bereich: Allgemein
+Im Bereich *Allgemein* siehst du alle wichtigen Informationen zu deinem Auftrag auf einen Blick.
 
 [[table-portlet-general]]
 .Bereich: Allgemein
@@ -541,29 +702,29 @@ Die Standardeinstellung für Währung ist Euro (EUR).
 
 | *Paketnummern*
 |Gib eine Paketnummer ein. +
-Durch Klick auf auf das Symbol icon öffnet sich das Versandcenter.
+Durch das Symbol *Öffne das Versancenter* wird weitergeleitet zum Versandcenter 2.0.
 // TODO: 4 Symbole beschreiben
 *Auftrag anmelden*
 *Polling*
 *Retoure anmelden*
 *Auftrag zurücksetzen*
-
-// TODO: abgleichen mit Versandcenter 2.0 - wie darstellen?
+//// 
+// TODO: beschreiben oder auf Versandcenter 2.0 verweisen?
 4 Bereiche links in der Seitennavigation: 
-*Übersicht*
-Empfänger
-Pakete, darunter
+* Übersicht
+* Empfänger
+* Pakete, darunter
 ID, Bezeichnung, Gewichtt, Maße, Volumen, Anzahl der Artikel, Typ, Paketnummer, Erstellt:, Geändert:
 Über blau hinterlegt Bestätigen
 
-*Retouren*
+* Retouren
 ID
 Retouren-ID
 Retourendienstleister
 Angemeldet am 
 Gültig bis
 Paketnummer
-Über blau hinterlegt Bestätigen
+////
 
 | *Herkunft*
 |Wähle die Herkunft über die Dropdown-Liste. +
@@ -577,15 +738,16 @@ Die Standardeinstellung für für Herkunft ist Manuelle Eingabe [0].
 
 | *Eigner*
 |Wähle einen Eigner aus der Dropdownliste.
+
 |====
 
 
 [#portlet-order-positions]
-=== Portlet Auftragspositionen
+=== Bereich: Auftragspositionen
 Im Portlet *Auftragspositionen* siehst du alle für den Auftrag relevante Informationen von Menge bis Preise.
 
 [[table-order-positions]]
-.Auftragspositionen
+.Bereich: Auftragspositionen
 [cols="1,3"]
 |====
 |Einstellung|Erläuterung
@@ -665,11 +827,11 @@ Dies ist eine optionale Spalte.
 
 
 [#portlet-payment-terms]
-=== Portlet Zahlungsbedingungen
-Im Portlet *Zahlungsbedingungen* siehst du die Werte *Zahlungsziel (Tage)*, *Valuta (Tage)*, *Skonto (Tage)* und *Skonto (%)* werden die Zahlungsbedingungen dargestellt.
+=== Bereich: Zahlungsbedingungen
+Im Bereich *Zahlungsbedingungen* siehst du die Werte *Zahlungsziel (Tage)*, *Valuta (Tage)*, *Skonto (Tage)* und *Skonto (%)* werden die Zahlungsbedingungen dargestellt.
 
 [[table-payment-terms]]
-.Zahlungsbedingungen
+.Bereich: Zahlungsbedingungen
 [cols="1,3"]
 |====
 |Einstellung|Erläuterung
@@ -688,11 +850,11 @@ Im Portlet *Zahlungsbedingungen* siehst du die Werte *Zahlungsziel (Tage)*, *Val
 
 
 [#portlet-bank-data]
-=== Bereich Bankdaten
+=== Bereich: Bankdaten
 Im Bereich *Bankdaten* kannst du über Icon + die Bankddaten eingeben, durch Klick auf + öffnet sich ein Fenster *Neue Bankdaten*. Dort kannst du die erforderlichen Daten eingeben. Felder mit Stern sind Pflichtfelder.
 
 [[table-bank-data]]
-.Bankdaten
+.Bereich: Bankdaten
 [cols="1,3"]
 |====
 |Einstellung|Erläuterung
@@ -744,16 +906,17 @@ Du kannst das Datum durch Eingabe eines neuen Datums ändern.
 
 | *Ausführungsmodalität*
 |Wähle zwischen *Einmalige Zahlung* und *Wiederkehrende Zahlung*.
+
 |====
 
 
 [#portlet-assigned-payments]
-=== Zugeordnete Zahlungen
-Im Portlet *Zugeordnete Zahlungen* siehst du...
+=== Bereich: Zugeordnete Zahlungen
+Im Bereich *Zugeordnete Zahlungen* siehst du...
 Über + kannst du *Zahlung erstellen*. Über icon:settings[set=material] kannst du die *Spalten konfigurieren*
 
 [[table-assigned-payments]]
-.Bereichf: Zugeordnete Zahlungen
+.Bereich: Zugeordnete Zahlungen
 [cols="1,3"]
 |====
 |Einstellung|Erläuterung
@@ -966,21 +1129,16 @@ Im Bereich *Historie* siehst du alle ...
 [#portlet-book-back-item]
 === Bereich: Waren zurückbuchen
 Der Bereich *Waren zurückbuchen* lässt sich öffnen, wenn du in einer *Retoure* auf *Waren zurückbuchen* gehst. Über icon:input[set=material] kannst du den Bereich öffnen. Der Titel erscheint nach dem Anlegen auch links in der Seitennavigation. In einer Retoure ist icon:input[set=material] immer zu sehen. In einem (Haupt-)Auftrag oder einer Garantie siehst du das Icon nur dann, wenn ein versandter Artikel hinterlegt ist.
-Über icon:settings[set=material] kannst du die Spalten konfigurieren.
+Über icon:settings[set=material] kannst du auch in diesem Bereich die Spalten konfigurieren.
 
-//// 
-in Entwicklung, erklären lassen;
 
-siehe auch https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/mhd-charge-verwalten.html und https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/warenbestaende-verwalten.html#100 bzw. mdh_charge_verwalten.adoc
-https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/praxisbeispiel-bestand-umbuchen.html
+. Wähle die Retoure
+. Wähle im Bereich Allgemein das Datum für die Rückbuchung. 
+. Klicke auf icon:save[set=material]. +
+-> das Bearbeitungsfenster für *Waren zurückbuchen* öffnet sich und neben dem Warenkorb wird icon:input[set=material] sichtbar. 
 
-siehe Bestand überwachen Kap. 4.1 MDH und Charge sowie Ware einbuchen
 
-3 striche mit +; Warenkorb +;
-//// 
-
-Bereich Allgemein: Dort muss das Datum gewählt werden. 
-Dann speichern. Das Pop-up Fenster für die Bestätigung *Waren zurückbuchen* öffnet sich. Wenn bestätigt ist oben das Icon Input sichtbar. Es ist genauso aufgebaut wie die anderen Auftragstypen. Übericon:settings[set=material] kannst du die Spalten konfigurieren.
+Es ist genauso aufgebaut wie die anderen Auftragstypen.
 
 [[table-book-back-item]]
 .Waren zurückbuchen
@@ -1017,9 +1175,9 @@ Rechts am Rand kannst du über icon:add_shopping_cart[set=material] Artikel zum 
 
 2+^| *Warenkorb*
 // TODO: Reihenfolge siehe oben.
-| *reverse* (display field)
-|Die
-(validation: reverse cannot be higher than open quantity
+| *Rückbuchung* (display field)
+|Der Warenbestand, der zurück gebucht werden soll. +
+Die Menge der zurück zu buchenden Waren/Artikel kann nicht höher sein als die offene Menge.
 
 | *Lager* (single select)
 |Die
@@ -1036,22 +1194,31 @@ Rechts am Rand kannst du über icon:add_shopping_cart[set=material] Artikel zum 
 | *Mindesthaltbarkeitsdatum (MHD)* (display field)
 |Die
 
-| *Artikel-ID* (display field)
+| *Artikel-ID*
 |Die *Artikel-ID* wird angezeigt.
 
-| *Varianten-ID* (display field)
+| *Varianten-ID*
 |Die *Varianten-ID* wird angezeigt.
 
-| *Variantenname* (display field)
+| *Variantenname*
 |Die *Variantenname* wird angezeigt.
+
 |====
+
+//// 
+in Entwicklung, erklären lassen;
+
+siehe auch https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/mhd-charge-verwalten.html und https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/warenbestaende-verwalten.html#100 bzw. mdh_charge_verwalten.adoc
+https://knowledge.plentymarkets.com/de-de/manual/main/warenwirtschaft/praxisbeispiel-bestand-umbuchen.html
+
+siehe Bestand überwachen Kap. 4.1 MDH und Charge sowie Ware einbuchen
+//// 
 
 
 [#order-details]
 === Auftragsdetails
 
 Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen]. Beachte dazu auch <<table-order-details-new-order>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
-
 // TODO: alle xref prüfen/anpassen
 
 [[table-order-details-new-order]]
@@ -2228,9 +2395,11 @@ Auftrag für das Bundle und Komponenten werden extra hinzugefügt. Eigener Typ A
 * Sonderfall Artikelpakete: +
 **Artikelpakete** bestehen aus mehreren Einzelartikeln. Für diese Pakete wird in plentymarkets kein eigener Warenbestand geführt. Der Bestand der Artikelpakete richtet sich nach dem Bestand der darin enthaltenen Artikel. Wird ein Artikelpaket verkauft, werden die darin enthaltenen Artikel automatisch in den reservierten Bestand übernommen. +
 *_Hinweis:_* Damit ein Paket verfügbar ist, müssen dessen Bestandteile im selben Lager liegen.
+////
 
-Neu dazu: Nettopreis bearbeiten
+// TODO: an welche Stelle?
+Nettopreis
 Bei dem Bearbeiten von Positionen im Auftrag kann man in der neuen UI nicht nur den Bruttopreis bearbeiten, sondern auch den Nettopreis. Der Stift Bearbeiten ist für Nettopreis dazu gekommen. 
 Bei Standardeinstellung wird der ... Der manuelle Preis ...
-////
+
 
