ADD more work to the item faq page

--- a/docs/de-de/modules/artikel/pages/faq-pim.adoc
+++ b/docs/de-de/modules/artikel/pages/faq-pim.adoc
@@ -191,6 +191,14 @@ include::page$preise.adoc[tag=faq-strikethrough-price]
 
 --
 
+[.collapseBox]
+.*Text*
+--
+
+Text
+
+--
+
 #Wie mache ich# einen Aktionspreis außer nur UVP? Text z.B. alter Preis
 
 [#300]
@@ -201,6 +209,14 @@ include::page$preise.adoc[tag=faq-strikethrough-price]
 --
 
 include::page$attribute.adoc[tag=faq-attribute-property-characteristic]
+
+--
+
+[.collapseBox]
+.*Text*
+--
+
+Text
 
 --
 
@@ -235,6 +251,14 @@ include::page$attribute.adoc[tag=faq-attribute-restore]
 --
 
 include::page$attribute.adoc[tag=faq-add-attribute-existing-item]
+
+--
+
+[.collapseBox]
+.*Text*
+--
+
+Text
 
 --
 
@@ -295,25 +319,47 @@ include::page$eigenschaften.adoc[tag=faq-properties-filters]
 [#500]
 == Beschreibungstexte und Bilder
 
-#Wie viele# Bilder kann ich pro Artikel haben?
+[.collapseBox]
+.*Wie viele Bilder kann ich pro Artikel hochladen?*
+--
 
-#Maximumgröße# eines Artikelbildes
+* *Artikel » Artikel bearbeiten*:
+Nutzt du dieses Menü?
+Dann kannst du bis zu 100 Bilder pro Artikel, d.h. pro Artikel-ID hochladen.
+Dies ist ein hartes Limit in der Benutzeroberfläche.
+Würdest du z.B. 150 Bilder hochladen, dann würden nur die ersten 100 in der Benutzeroberfläche erscheinen.
+Beachte, dass das Limit für den gesamten Artikel gilt, also für alle Varianten zusammen.
+* *Artikel » Artikel-UI*:
+Nutzt du dieses Menü?
+Dann kannst du beliebig viele Bilder hochladen.
+In diesem Menü gibt es keine Obergrenze.
 
-#Wie kann ich# steuern, welche Platzhalterbilder dargestellt werden? Diese Frage auch im plentyShop Bereich
-
-#Ich will meine# Bild-URLs personalisieren. Wie geht das?
+--
 
 [.collapseBox]
-.*#Ich will die# Beschreibungstexte eines Artikels ändern. Wie mach ich das?*
+.*Nicht alle meine Artikel haben ein Bild. Wie kann ich beeinflussen, welches Platzhalterbild für sie im plentyShop angezeigt wird?*
 --
 
+//diese Frage ist auch im Bereich plentyShop zu finden
+
+. Öffne das Menü *Einrichtung » Artikel » Bilder » Einstellungen*. +
+→ Das Menü ist in mehrere Bereiche unterteilt.
+. Nimm die Einstellungen im Bereich *Platzhalter* vor.
+Dieser Bereich bezieht sich auf Platzhalterbilder.
+Hat ein Artikel kein eigenes Bild, wird stattdessen das Platzhalterbild angezeigt.
+. Speichere (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+include::page$bilder.adoc[tag=itemimages-placeholder]
 
 --
 
 [.collapseBox]
-.*#Kann ich variantenspezifische# Texte hinterlegen?*
+.*Ich will meine Bild-URLs personalisieren. Wie mache ich das?*
 --
 
+include::page$bilder.adoc[tag=personalise-itemimage-urls-preamble]
+
+xref:artikel:bilder.adoc#200[Weitere Informationen].
 
 --
 
@@ -321,6 +367,7 @@ include::page$eigenschaften.adoc[tag=faq-properties-filters]
 .*#Ich will viele Bilder# hochladen. Wie mache ich das am effizientesten?*
 --
 
+Text
 
 --
 
@@ -332,10 +379,51 @@ include::page$attribute.adoc[tag=attribute-images-dynamic]
 
 --
 
+[.collapseBox]
+.*Ich will die Beschreibungstexte eines Artikels ändern. Wie mache ich das?*
+--
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte*.
+. Wähle die passende Sprache aus der linken Dropdown-Liste aus.
+. Gib die Artikeltexte in dieser Sprache ein.
+. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
+
+xref:artikel:import-export-anlage-verzeichnis.adoc#50[Weitere Informationen].
+
+--
+
+[.collapseBox]
+.*Kann ich variantenspezifische Texte hinterlegen?*
+--
+
+Die Texte, die im Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte* gespeichert sind, gelten für den ganzen Artikel. Das heißt, die Texte gelten für alle Varianten.
+Es ist aber auch möglich, variantenspezifische Texte zu speichern.
+
+. Zuerst erstellst du xref:artikel:eigenschaften.adoc#500[Eigenschaften] vom Typ *Text* oder *HTML*.
+. Dann xref:artikel:eigenschaften.adoc#1400[verknüpfst du diese Eigenschaften] mit bestimmten Varianten.
+
+--
+
 [#400]
 == Massenbearbeitung
 
+[.collapseBox]
+.*Text*
+--
+
+Text
+
+--
+
 #Mein Lieferant hat# mir eine Datei mit neue EKs geschickt. Wie importiere ich diese neue EK-Preise?
+
+[.collapseBox]
+.*Text*
+--
+
+Text
+
+--
 
 #Was ist der Unterschied# zwischen Gruppenfunktion und Stapelbearbeitung?
 
@@ -343,6 +431,7 @@ include::page$attribute.adoc[tag=attribute-images-dynamic]
 .*#Praxisbeispiel#: Mein Hersteller hat ein Zubehörteil umbenannt. Wie ändere ich den Namen in allen Artikeltexten?*
 --
 
+Text
 
 --
 
@@ -350,16 +439,53 @@ include::page$attribute.adoc[tag=attribute-images-dynamic]
 .*#Praxisbeispiel#: Ich muss die Transportkosten aller Artikel eines bestimmten Herstellers erhöhen. Wie mache ich das?*
 --
 
+Text
+
+--
+
+[.collapseBox]
+.*Text*
+--
+
+Text
 
 --
 
 #Ab wann bricht# das Stapelverarbeitung ab?
 
+[.collapseBox]
+.*Text*
+--
+
+Text
+
+--
+
 #Wie schaut's aus# mit FTP
 
-#Ich verkaufe bereits# auf Amazon, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von Amazon übernehmen?
+[.collapseBox]
+.*#Ich verkaufe bereits# auf Amazon, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von Amazon übernehmen?*
+--
 
-#Ich verkaufe bereits# auf eBay, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von eBay übernehmen?
+Text
+
+--
+
+[.collapseBox]
+.*#Ich verkaufe bereits# auf eBay, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von eBay übernehmen?*
+--
+
+Text
+
+--
+
+[.collapseBox]
+.*Text*
+--
+
+Text
+
+--
 
 #Gibt es Beispiele# für den Import?
 -Videos
@@ -373,16 +499,44 @@ include::page$attribute.adoc[tag=attribute-images-dynamic]
 [#600]
 == Darstellung im plentyShop
 
-#Merkblatt oder Broschüre# als Download in Shop anbieten
+[.collapseBox]
+.*Nicht alle meine Artikel haben ein Bild. Wie kann ich beeinflussen, welches Platzhalterbild für sie im plentyShop angezeigt wird?*
+--
 
-#Cross-Selling#
+//diese Frage ist auch im Bereich Beschreibungstexte und Bilder zu finden
 
-#Dropdown Text# select a variation
+. Öffne das Menü *Einrichtung » Artikel » Bilder » Einstellungen*. +
+→ Das Menü ist in mehrere Bereiche unterteilt.
+. Nimm die Einstellungen im Bereich *Platzhalter* vor.
+Dieser Bereich bezieht sich auf Platzhalterbilder.
+Hat ein Artikel kein eigenes Bild, wird stattdessen das Platzhalterbild angezeigt.
+. Speichere (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+include::page$bilder.adoc[tag=itemimages-placeholder]
+
+--
+
+[.collapseBox]
+.*#Meine Kunden sollen# Produkt-Merkblätter oder Broschüren aus meinem plentyShop herunterladen können. Wie geht das?*
+--
+
+Text
+
+--
+
+[.collapseBox]
+.*#Was muss ich# tun, um eine Cross-Selling-Liste in meinem plentyShop darzustellen?*
+--
+
+Text
+
+--
 
 [.collapseBox]
 .*#Warum ist mein Artikel# im plentyShop nicht sichtbar?*
 --
 
+Text
 
 --
 
@@ -390,6 +544,7 @@ include::page$attribute.adoc[tag=attribute-images-dynamic]
 .*#Warum ist meine Kategorie# im plentyShop nicht sichtbar?*
 --
 
+Text
 
 --
 
@@ -397,6 +552,7 @@ include::page$attribute.adoc[tag=attribute-images-dynamic]
 .*#Ich bin mit den Suchergebnissen# im plentyShop nicht zufrieden. Wie kann ich sie besser machen?*
 --
 
+Text
 
 --
 
@@ -415,8 +571,6 @@ include::page$attribute.adoc[tag=attribute-images-dynamic]
 include::page$attribute.adoc[tag=attribute-colour-tiles]
 
 --
-
-#Wie viele Kategorie-Ebenen# kann ich maximum im Shop haben?
 
 ////
 [.collapseBox]
@@ -487,14 +641,42 @@ include::page$attribute.adoc[tag=steps-attribute-value-name-translations]
 
 == Fragen zum Sortiment
 
-#Wie kann ich herauszufinden#, welche Artikel am häufigsten verkauft werden?
+[.collapseBox]
+.*#Wie kann ich# herausfinden, welche meiner Artikel am häufigsten verkauft werden?*
+--
 
-#Ich will Produkte kombinieren# und als eine Verkaufseinheit anbieten. Wie mache ich das?
+Text
 
-#Ich will Werbegeschenke# oder Gratiszugaben ab einem bestimmten Warenwert anbieten. Wie mache ich das?
+--
 
-#Gift cards#
+[.collapseBox]
+.*#Ich will Produkte kombinieren# und als eine Verkaufseinheit anbieten. Wie mache ich das?*
+--
 
-#Serial numbers#
+Text
 
-#Electronics with an age rating#
+--
+
+[.collapseBox]
+.*#Ich will Werbegeschenke# oder Gratiszugaben ab einem bestimmten Warenwert anbieten. Wie mache ich das?*
+--
+
+Text
+
+--
+
+[.collapseBox]
+.*#Ich verkaufe# Artikel, die mit Seriennummern versehen sind. Kann plentymarkets protokollieren, welche Seriennummer zu welchem Auftrag gehört?*
+--
+
+Text
+
+--
+
+[.collapseBox]
+.*#Ich verkaufe elektronische# Artikel mit einer Altersfreigabe. Oder Artikel, die nur mit einem Altersnachweis von 18+ gekauft werden können. Was muss ich beachten?*
+--
+
+Text
+
+--
