--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -257,6 +257,7 @@
 ***** xref:data:exporting-stock-movements.adoc[Stock movements]
 ***** xref:data:exporting-payments.adoc[Payments]
 **** xref:data:catalogues-manage.adoc[Managing catalogues]
+**** xref:daten:catalogues-status.adoc[Checking catalogue status]
 ** xref:data:datalog.adoc[Data log]
 ** xref:data:data-cleansing.adoc[Data cleansing]
 ** xref:data:backup.adoc[Database backup]
