--- a/docs/de-de/modules/webshop/pages/best-practices.adoc
+++ b/docs/de-de/modules/webshop/pages/best-practices.adoc
@@ -35,3 +35,7 @@ include::partial$bp-ceres-suche.adoc[leveloffset=1]
 [#widerrufsrecht-einwilligung.adoc]
 include::partial$bp-lts-waive-cancellation-rights-checkout.adoc[leveloffset=1]
 
+[#niedrigster-preis.adoc]
+include::partial$bp-lts-lowest-price-thirty-days.adoc[leveloffset=1]
+
+
