--- a/docs/en-gb/modules/data/pages/catalogues-status.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-status.adoc
@@ -60,7 +60,7 @@ When exports of the type *Async* are started, the data to be exported is split i
 //end::what-is-a-job[]
 
 | *Error*
-| How many error occurred during the export? +
+| How many errors occurred during the export? +
 *_Tip:_* Click on the export to <<#status-details, see details>>.
 
 | *Successful jobs*
